add support for multi-tenants

--- a/KeycloakAuth/KeycloakAuth.csproj
+++ b/KeycloakAuth/KeycloakAuth.csproj
@@ -16,4 +16,10 @@
 
 
 
+  <ItemGroup>
+    <None Remove="MultiTenants\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MultiTenants\" />
+  </ItemGroup>
 </Project>
