--- a/KeycloakAuth/appsettings.json
+++ b/KeycloakAuth/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "Keycloak": {
+    "IsMultiTenants": false,
     "ServerRealm": "https://your-keycloak.domain.com/auth/realms/YOUR-REALM",
     "Metadata": "https://your-keycloak.domain.com/auth/realms/YOUR-REALM/.well-known/openid-configuration",
     "ClientId": "someclientname",
